<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_saved">

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.travelease.ui.saved.SavedFragment"
        android:label="@string/title_fragment_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.travelease.ui.create.CreateFragment"
        android:label="@string/create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.travelease.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>